// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadoutDisplay matches snapshot when primary is false 1`] = `
.c0 {
  color: hsla(0,0%,0%,0.85);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 6px;
  margin: 0  calc(var(--SPACING_BASE) * 1 * 1px)  calc(var(--SPACING_BASE) * 1 * 1px) 0;
  position: relative;
  overflow: hidden;
  font-family: Inter,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  box-shadow: inset 0 0 0 1px hsla(0,0%,0%,0.08),inset 0 -43px 0 -40px transparent;
  z-index: 1;
}

.c0:before {
  content: "";
  opacity: 0.2;
  background-color: transparent;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 0;
}

.c0:first-child:last-child {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

<div
  className="c0"
  color="transparent"
/>
`;

exports[`ReadoutDisplay matches snapshot when primary is true 1`] = `
.c0 {
  color: hsla(0,0%,0%,0.85);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 6px;
  margin: 0  calc(var(--SPACING_BASE) * 1 * 1px)  calc(var(--SPACING_BASE) * 1 * 1px) 0;
  position: relative;
  overflow: hidden;
  font-family: Inter,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  box-shadow: inset 0 0 0 1px hsla(0,0%,0%,0.08),inset 0 -43px 0 -40px transparent;
  z-index: 1;
}

.c0:before {
  content: "";
  opacity: 0.2;
  background-color: transparent;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 0;
}

.c0:first-child:last-child {
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
}

.c0:before {
  opacity: 0.3;
}

<div
  className="c0"
  color="transparent"
/>
`;
